# OpenCC

./: .env.example  .gitignore  EVALUATION.md  NOTES.md  README.md  config.cm-only.yaml  config.example.yaml  config.jb-only.yaml  config.local.yaml  pyproject.toml
notebooks/: demo.ipynb
src/constitutional_classifier/: __init__.py  cli.py  model_config.py  taxonomy.py
src/constitutional_classifier/backends/: __init__.py  anthropic_backend.py  base.py  hf_classifier_backend.py  openai_backend.py  router.py  vllm_backend.py
src/constitutional_classifier/pipeline/: __init__.py  config.py  pipeline.py  result.py  stages.py
src/constitutional_classifier/server/: __init__.py  app.py  schemas.py
tests/: conftest.py  test_pipeline.py  test_server.py
